update routes and imports in server
